fixing gap

--- a/style/style.css
+++ b/style/style.css
@@ -93,7 +93,7 @@ body {
     grid-template-areas:
      "work-card play-card study-card"
      "exercise-card social-card selfcare-card";
-    gap: 2rem;
+    gap: 3rem;
     height: 100%;
     
 }
